--- a/website/otherpages/cert page.html
+++ b/website/otherpages/cert page.html
@@ -15,7 +15,7 @@
     
     <section class="p-10 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="certifications">
         <div class="bg-gray-800 p-4 rounded-lg shadow-lg transform hover:scale-105 transition-all">
-            <img src="C:\Users\oscar\OneDrive\Documents\website\otherpages\certificates and licenses\intro_to_cyberSec.pdf" alt="Certification 1" class="w-full h-auto rounded-md">
+            <img src="website\otherpages\certificates and licenses\intro_to_cyberSec.pdf" alt="Certification 1" class="w-full h-auto rounded-md">
             <h3 class="text-2xl font-medium mt-4">introduction to cyber security</h3>
             <p class="mt-2">Issued by: Cisco Networking Academy</p>
         </div>
