added certpage as accessible page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
                 <h3 class="text-2xl font-medium">Pong</h3>
-                <p class="mt-2">I have created a working cross-platform rendition of the clasic 70s arcade game pong.</p>
+                <p class="mt-2">A working cross-platform rendition of the clasic 70s arcade game pong.</p>
 
             </div>
             <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
@@ -31,7 +31,9 @@
             </div>
         </div>
     </section>
-    
+    <section>
+        <h2 class="text-4xl font-semibold text-center mb-10"><a href = websiteotherpages/certpage.html>Certifications & Qualifications</a></h2>
+    </section>
     <section class="p-10 text-center" id="contact">
         <h2 class="text-4xl font-semibold">Contact Me</h2>
         <p class="mt-4">Email:ojb007@yahoo.com</p>
