--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             </div>
         </div>
     </section>
+
     <section>
-        <h2 class="text-4xl font-semibold text-center mb-10"><a href = websiteotherpages/certpage.html>Certifications & Qualifications</a></h2>
+        <h2 class="text-4xl font-semibold text-center mb-10"><a href = "website/otherpages/certpage.html">Certifications & Qualifications</a></h2>
     </section>
     <section class="p-10 text-center" id="contact">
         <h2 class="text-4xl font-semibold">Contact Me</h2>
