--- a/website/otherpages/certpage.html
+++ b/website/otherpages/certpage.html
@@ -15,12 +15,12 @@
     
     <section class="p-10 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="certifications">
         <div class="bg-gray-800 p-4 rounded-lg shadow-lg transform hover:scale-105 transition-all">
-            <img src="website\otherpages\certificates and licenses\intro_to_cyberSec-1.png"class="w-full h-auto rounded-md">
+            <img src="website\otherpages\certificates and licenses\intro_to_cyberSec-1.png"alt = "introduction to cyber security"class="w-full h-auto rounded-md">
             <h3 class="text-2xl font-medium mt-4">introduction to cyber security</h3>
             <p class="mt-2">Issued by: Cisco Networking Academy</p>
         </div>
         <div class="bg-gray-800 p-4 rounded-lg shadow-lg transform hover:scale-105 transition-all">
-            <img src="cert2.png"  class="w-full h-auto rounded-md">
+            <img src="cert2.png" alt="Certification 2" class="w-full h-auto rounded-md">
             <h3 class="text-2xl font-medium mt-4">Certification 2</h3>
             <p class="mt-2">Issued by: Organization Name</p>
         </div>
