added pong page

--- a/website/otherpages/project pages/pong.html
+++ b/website/otherpages/project pages/pong.html
@@ -31,7 +31,7 @@
     <section class="p-10 max-w-5xl mx-auto">
         <h2 class="text-3xl font-semibold">Technologies Used</h2>
         <ul class="mt-4 space-y-3">
-            <li class="bg-gray-800 p-4 rounded-lg shadow-lg">🚀 Technology 1 - Description</li>
+            <li class="bg-gray-800 p-4 rounded-lg shadow-lg">🚀 monogame - monogame is a extention on the c# language allowing you to make both 3d and 2d animations or simulations</li>
             <li class="bg-gray-800 p-4 rounded-lg shadow-lg">🚀 Technology 2 - Description</li>
             <li class="bg-gray-800 p-4 rounded-lg shadow-lg">🚀 Technology 3 - Description</li>
         </ul>                                                                                                                                                                                                                                                                                                                                                                                                                               
