--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <h2 class="text-4xl font-semibold text-center mb-10">Projects</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
+               <a href="website\otherpages\project pages\pong.html"> 
                 <h3 class="text-2xl font-medium">Pong</h3>
                 <p class="mt-2">A working cross-platform rendition of the clasic 70s arcade game pong.</p>
-
+               </a>
             </div>
             <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
                 <h3 class="text-2xl font-medium">Ransomware Detection & Prevention System</h3>
