--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-900 text-white">
     <header class="h-screen flex flex-col justify-center items-center text-center">
         <h1 class="text-5xl font-bold opacity-0" id="title">Hello, I'm Oscar Ball</h1>
-        <p class="text-lg mt-4 opacity-0" id="subtitle">collage student aspiring to be a cyber security professional </p>
+        <p class="text-lg mt-4 opacity-0" id="subtitle">college student aspiring to be a cyber security professional </p>
     </header>
     
     <section class="p-10" id="projects">
