--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Portfolio</title>
+
+  <!-- GSAP CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="bg-gray-900 text-white">
-    <header class="h-screen flex flex-col justify-center items-center text-center">
-        <h1 class="text-5xl font-bold opacity-0" id="title">Hello, I'm Oscar Ball</h1>
-        <p class="text-lg mt-4 opacity-0" id="subtitle">college student aspiring to be a cyber security professional </p>
-    </header>
-    
-    <section class="p-10" id="projects">
-        <h2 class="text-4xl font-semibold text-center mb-10">Projects</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
-               <a href="website\otherpages\project pages\pong.html"> 
-                <h3 class="text-2xl font-medium">Pong</h3>
-                <p class="mt-2">A working cross-platform rendition of the clasic 70s arcade game pong.</p>
-               </a>
-            </div>
-            <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
-                <h3 class="text-2xl font-medium">Ransomware Detection & Prevention System</h3>
-                <p class="mt-2">Monitors files, detects ransomware encryption, kills malicious processes, and logs threats(in progress).</p>
-            </div>
-            <div class="bg-gray-800 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-all">
-                <h3 class="text-2xl font-medium">3D printed robot </h3>
-                <p class="mt-2">I have been working on a programable robot that can preform multiple diffrent tasks.</p>
-            </div>
-        </div>
-    </section>
+<body class="bg-dark text-light">
+  <header class="hero">
+    <h1 class="title" id="title">Hello, I'm Oscar Ball</h1>
+    <p class="subtitle" id="subtitle">
+      College student aspiring to be a cybersecurity professional
+    </p>
+  </header>
 
-    <section>
-        <h2 class="text-4xl font-semibold text-center mb-10"><a href = "website/otherpages/certpage.html">Certifications & Qualifications</a></h2>
-    </section>
-    <section class="p-10 text-center" id="contact">
-        <h2 class="text-4xl font-semibold">Contact Me</h2>
-        <p class="mt-4">Email:ojb007@yahoo.com</p>
-        <p>LinkedIn:<a href ="https://www.linkedin.com/in/oscar-ball-2a99aa354/">Oscar Ball</a></p>
-        <p>GitHub:<a href="https://github.com/Bally07">bally007</a></p>
-    </section>
+  <section class="section" id="projects">
+    <h2 class="section-title">Projects</h2>
+    <div class="grid">
+      <div class="card">
+        <a href="website/otherpages/project pages/pong.html">
+          <h3>Pong</h3>
+          <p>A working cross-platform rendition of the classic 70s arcade game pong.</p>
+        </a>
+      </div>
+      <div class="card">
+        <h3>Password Manager</h3>
+        <p>A web app design (in progress).</p>
+      </div>
+      <div class="card">
+        <h3>3D Printed Robot</h3>
+        <p>A programmable robot that can perform multiple different tasks.</p>
+      </div>
+    </div>
+  </section>
 
-    <script>
-        gsap.fromTo("#title", { opacity: 0, y: -50 }, { opacity: 1, y: 0, duration: 1.2 });
-        gsap.fromTo("#subtitle", { opacity: 0, y: 50 }, { opacity: 1, y: 0, duration: 1.2, delay: 0.5 });
-    </script>
+  <section class="section">
+    <h2 class="section-title">
+      <a href="website/otherpages/certpage.html">Certifications & Qualifications</a>
+    </h2>
+  </section>
+
+  <section class="section text-center" id="contact">
+    <h2 class="section-title">Contact Me</h2>
+    <p>Email: <a href="mailto:ojb007@yahoo.com">ojb007@yahoo.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/oscar-ball-2a99aa354/">Oscar Ball</a></p>
+    <p>GitHub: <a href="https://github.com/Bally07">bally007</a></p>
+  </section>
+
+  <script>
+    gsap.fromTo("#title", { opacity: 0, y: -50 }, { opacity: 1, y: 0, duration: 1.2 });
+    gsap.fromTo("#subtitle", { opacity: 0, y: 50 }, { opacity: 1, y: 0, duration: 1.2, delay: 0.5 });
+  </script>
 </body>
 </html>
