--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2 class="section-title">Projects</h2>
     <div class="grid">
       <div class="card">
-        <a href="website/otherpages/project pages/pong.html">
+        <a href="pong.html">
           <h3>Pong</h3>
           <p>A working cross-platform rendition of the classic 70s arcade game pong.</p>
         </a>
@@ -41,7 +41,7 @@
 
   <section class="section">
     <h2 class="section-title">
-      <a href="website/otherpages/certpage.html">Certifications & Qualifications</a>
+      <a href="certpage.html">Certifications & Qualifications</a>
     </h2>
   </section>
 
