--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <title>My Portfolio</title>
 
   <!-- GSAP CDN -->
@@ -12,6 +13,8 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-dark text-light">
+
+  
   <header class="hero">
     <h1 class="title" id="title">Hello, I'm Oscar Ball</h1>
     <p class="subtitle" id="subtitle">
@@ -23,16 +26,19 @@
     <h2 class="section-title">Projects</h2>
     <div class="grid">
       <div class="card">
-        <a href="pong.html">
+        <a href="https://github.com/Bally07/pong">
           <h3>Pong</h3>
           <p>A working cross-platform rendition of the classic 70s arcade game pong.</p>
         </a>
       </div>
       <div class="card">
-        <h3>Password Manager</h3>
-        <p>A web app design (in progress).</p>
+        <a href="https://github.com/Bally07/paswordmanager">
+        <h3>Password Manager</h3>  
+        <p>A web app password manger  (in progress).</p>
+        </a>
       </div>
       <div class="card">
+        
         <h3>3D Printed Robot</h3>
         <p>A programmable robot that can perform multiple different tasks.</p>
       </div>
