cerification page fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="bg-dark text-light">
 
-  
+
   <header class="hero">
     <h1 class="title" id="title">Hello, I'm Oscar Ball</h1>
     <p class="subtitle" id="subtitle">
@@ -51,7 +51,7 @@
     </h2>
   </section>
 
-  <section class="section text-center" id="contact">
+  <section class="section-text-center">
     <h2 class="section-title">Contact Me</h2>
     <p>Email: <a href="mailto:ojb007@yahoo.com">ojb007@yahoo.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/oscar-ball-2a99aa354/">Oscar Ball</a></p>
