--- a/certpage.html
+++ b/certpage.html
@@ -3,23 +3,23 @@
          <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
           <title>My Certifications</title> 
-          <script src="https://cdn.tailwindcss.com">
+           <link rel="stylesheet" href="styles.css" />
 
           </script> <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> 
           </head> 
           <body class="bg-gray-900 text-white">
-             <header class="h-screen flex flex-col justify-center items-center text-center p-6"> 
-                <h1 class="text-5xl font-bold opacity-0" id="page-title">My Certifications & Qualifications</h1> 
-                <p class="text-lg mt-4 opacity-0" id="page-subtitle">A showcase of my achievements</p> </header> 
+             <header class="hero"> 
+                <h1 class="title" id="page-title">My Certifications & Qualifications</h1> 
+                <p class="subtitle">A showcase of my achievements</p> </header> 
                 <section class="p-10 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="certifications"> 
                   
-                    <div class="bg-gray-800 p-4 rounded-lg shadow-lg transform hover:scale-105 transition-all"> 
+                    <div class="card"> 
                         <img src="intro_to_cyberSec-1.png"alt = "introduction to cyber security"class="w-full h-auto rounded-md"> 
                         <h3 class="text-2xl font-medium mt-4">introduction to cyber security</h3> 
                         <p class="mt-2">Issued by: Cisco Networking Academy</p> 
                     </div> 
                   
-                    <div class="bg-gray-800 p-4 rounded-lg shadow-lg transform hover:scale-105 transition-all"> 
+                    <div class="card"> 
                         <img src="EndPoint_Security.png" alt="EndPoint_Security" class="w-full h-auto rounded-md"> 
                         <h3 class="text-2xl font-medium mt-4">EndPoint_Security</h3> 
                         <p class="mt-2">Issued by: Cisco Networking Academy</p> 
