--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
     </h2>
   </section>
 
-  <section class="section-text-center">
+  <section class="section" id="contact">
     <h2 class="section-title">Contact Me</h2>
-    <p>Email: <a href="mailto:ojb007@yahoo.com">ojb007@yahoo.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/oscar-ball-2a99aa354/">Oscar Ball</a></p>
-    <p>GitHub: <a href="https://github.com/Bally07">bally007</a></p>
+    <p class ="section-text-center">
+    Email: <a href="mailto:ojb007@yahoo.com">ojb007@yahoo.com</a><br>
+    LinkedIn: <a href="https://www.linkedin.com/in/oscar-ball-2a99aa354/">Oscar Ball</a> <br>
+    GitHub: <a href="https://github.com/Bally07">bally007</a>
+  </p>
   </section>
 
   <script>
